--- a/Documentation/citations.bib
+++ b/Documentation/citations.bib
@@ -11,7 +11,7 @@
 	month = jun,
 	year = {2014},
 	pages = {133--144},
-	file = {atc14-paper-meng.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/AM86P866/atc14-paper-meng.pdf:application/pdf}
+	file = {Meng et al. - 2014 - vCacheShare Automated Server Flash Cache Space Ma.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/AM86P866/Meng et al. - 2014 - vCacheShare Automated Server Flash Cache Space Ma.pdf:application/pdf}
 }
 
 @inproceedings{flajolet_hyperloglog:_2007,
@@ -21,7 +21,7 @@
 	booktitle = {{IN} {AOFA} ’07: {PROCEEDINGS} {OF} {THE} 2007 {INTERNATIONAL} {CONFERENCE} {ON} {ANALYSIS} {OF} {ALGORITHMS}},
 	author = {Flajolet, Philippe and Fusy, Éric and Gandouet, Olivier and al, et},
 	year = {2007},
-	file = {Citeseer - Full Text PDF:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/VUQ9E74E/Flajolet et al. - 2007 - Hyperloglog The analysis of a near-optimal cardin.pdf:application/pdf}
+	file = {Flajolet et al. - 2007 - Hyperloglog The analysis of a near-optimal cardin.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/VUQ9E74E/Flajolet et al. - 2007 - Hyperloglog The analysis of a near-optimal cardin.pdf:application/pdf}
 }
 
 @inproceedings{wires_characterizing_2014,
@@ -35,7 +35,7 @@
 	month = oct,
 	year = {2014},
 	pages = {335--349},
-	file = {osdi14-paper-wires.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/V2DF5S4V/osdi14-paper-wires.pdf:application/pdf}
+	file = {Wires et al. - 2014 - Characterizing Storage Workloads with Counter Stac.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/V2DF5S4V/Wires et al. - 2014 - Characterizing Storage Workloads with Counter Stac.pdf:application/pdf}
 }
 
 @inproceedings{waldspurger_efficient_2015,
@@ -104,7 +104,7 @@
 	author = {Wang, Hui and Varman, Peter},
 	year = {2014},
 	pages = {229--242},
-	file = {fast14.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/CIXZ24WJ/fast14.pdf:application/pdf}
+	file = {Wang and Varman - 2014 - Balancing Fairness and Efficiency in Tiered Storag.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/CIXZ24WJ/Wang and Varman - 2014 - Balancing Fairness and Efficiency in Tiered Storag.pdf:application/pdf}
 }
 
 @inproceedings{chen_hystor:_2011,
@@ -120,7 +120,7 @@
 	year = {2011},
 	keywords = {hard disk drive, hybrid storage system, solid state drive},
 	pages = {22--32},
-	file = {TR-11-6.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/JR7H4Q2T/TR-11-6.pdf:application/pdf}
+	file = {Chen et al. - 2011 - Hystor Making the Best Use of Solid State Drives .pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/JR7H4Q2T/Chen et al. - 2011 - Hystor Making the Best Use of Solid State Drives .pdf:application/pdf}
 }
 
 @inproceedings{guerra_cost_2011,
@@ -134,7 +134,7 @@
 	author = {Guerra, Jorge and Pucha, Himabindu and Glider, Joseph and Belluomini, Wendy and Rangaswami, Raju},
 	year = {2011},
 	pages = {20--20},
-	file = {Guerra.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/CVVAJPQA/Guerra.pdf:application/pdf}
+	file = {Guerra et al. - 2011 - Cost Effective Storage Using Extent Based Dynamic .pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/CVVAJPQA/Guerra et al. - 2011 - Cost Effective Storage Using Extent Based Dynamic .pdf:application/pdf}
 }
 
 @article{tai_improving_2015,
@@ -149,4 +149,81 @@
 	keywords = {Bandwidth, cloud computing, Flash resource management, Flash utilization, Heuristic algorithms, IO access pattern, IO hit ratio, Measurement, resource management, Servers, Virtualized storage systems, Virtual machining},
 	pages = {1--1},
 	file = {Tai et al. - 2015 - Improving Flash Resource Utilization at Minimal Ma.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/JRJESVKG/Tai et al. - 2015 - Improving Flash Resource Utilization at Minimal Ma.pdf:application/pdf}
+}
+
+@article{mesnier_differentiated_2011,
+	title = {Differentiated {Storage} {Services}},
+	volume = {45},
+	issn = {0163-5980},
+	url = {http://doi.acm.org/10.1145/1945023.1945030},
+	doi = {10.1145/1945023.1945030},
+	number = {1},
+	journal = {SIGOPS Oper. Syst. Rev.},
+	author = {Mesnier, Michael P. and Akers, Jason B.},
+	month = feb,
+	year = {2011},
+	keywords = {caching, classification, file and storage systems, policybased management, quality-of-service (QoS), solid-state storage, tiered storage},
+	pages = {45--53},
+	file = {p45-mesnier.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/KS2WQUGD/p45-mesnier.pdf:application/pdf}
+}
+
+@inproceedings{sanvido_combo_2009,
+	title = {Combo {Drive}: {Optimizing} {Cost} and {Performance} in a {Heterogeneous} {Storage} {Device}},
+	booktitle = {In the 1st {Workshop} on {Integrating} {Solid}-state {Memory} into the {Storage} {Hierarchy}},
+	author = {Sanvido, Marco A. A. and Bandic, Zvonimir Z. and Kirsch, Christoph M.},
+	year = {2009},
+	file = {Sanvido et al. - 2009 - Combo Drive Optimizing Cost and Performance in a .pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/7VRAZ35M/Sanvido et al. - 2009 - Combo Drive Optimizing Cost and Performance in a .pdf:application/pdf}
+}
+
+@inproceedings{luo_s-cave:_2013,
+	address = {Piscataway, NJ, USA},
+	series = {{PACT} '13},
+	title = {S-{CAVE}: {Effective} {SSD} {Caching} to {Improve} {Virtual} {Machine} {Storage} {Performance}},
+	isbn = {978-1-4799-1021-2},
+	url = {http://dl.acm.org/citation.cfm?id=2523721.2523739},
+	booktitle = {Proceedings of the 22Nd {International} {Conference} on {Parallel} {Architectures} and {Compilation} {Techniques}},
+	publisher = {IEEE Press},
+	author = {Luo, Tian and Ma, Siyuan and Lee, Rubao and Zhang, Xiaodong and Liu, Deng and Zhou, Li},
+	year = {2013},
+	keywords = {cache, I/O, performance, ssd, storage, virtual machine},
+	pages = {103--112},
+	file = {Luo et al. - 2013 - S-CAVE Effective SSD Caching to Improve Virtual M.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/XDR242TX/Luo et al. - 2013 - S-CAVE Effective SSD Caching to Improve Virtual M.pdf:application/pdf}
+}
+
+@misc{apple_fusion_2012,
+	title = {Fusion {Drive}},
+	url = {https://en.wikipedia.org/wiki/Fusion_Drive},
+	author = {Apple},
+	month = oct,
+	year = {2012}
+}
+
+@article{matthews_intel&reg;_2008,
+	title = {Intel\&{Reg}; {Turbo} {Memory}: {Nonvolatile} {Disk} {Caches} in the {Storage} {Hierarchy} of {Mainstream} {Computer} {Systems}},
+	volume = {4},
+	issn = {1553-3077},
+	url = {http://doi.acm.org/10.1145/1367829.1367830},
+	doi = {10.1145/1367829.1367830},
+	number = {2},
+	journal = {Trans. Storage},
+	author = {Matthews, Jeanna and Trika, Sanjeev and Hensgen, Debra and Coulson, Rick and Grimsrud, Knut},
+	month = may,
+	year = {2008},
+	keywords = {disk cache, NAND, Nonvolatile memory, solid-state disk, write-back},
+	pages = {4:1--4:24},
+	file = {a4-matthews.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/GZX66EDV/a4-matthews.pdf:application/pdf}
+}
+
+@article{mattson_evaluation_1970,
+	title = {Evaluation {Techniques} for {Storage} {Hierarchies}},
+	volume = {9},
+	issn = {0018-8670},
+	url = {http://dx.doi.org/10.1147/sj.92.0078},
+	doi = {10.1147/sj.92.0078},
+	number = {2},
+	journal = {IBM Syst. J.},
+	author = {Mattson, R. L. and Gecsei, J. and Slutz, D. R. and Traiger, I. L.},
+	month = jun,
+	year = {1970},
+	pages = {78--117}
 }
