--- a/Documentation/overview.tex
+++ b/Documentation/overview.tex
@@ -2,30 +2,40 @@
 
 \subsection{Hit Ratio Curves}
 
-Hit ratio curves as a function of cache size gives us an estimate of the percentage of cache hits for any given cache size. A common method to calculate the HRC is by calculating the \emph{Reuse Distance} for every block request. A Reuse Distance (RD) is the number of unique blocks between two consecutive accesses of a given block.
+\emph{Hit Ratio Curves} (HRC) as a function of cache size gives us an estimate of the percentage of cache hits for any given cache size. A common method to calculate the HRC is by calculating the \emph{Reuse Distance} for every block request. A Reuse Distance (RD) is the number of unique blocks between two consecutive accesses of a given block.
 
-RD calculation for every block for a workload is computationally intensive. All the block requests for a given workload needs to be saved in the memory, and for every block request, the previous occurrence of that request has to be found and the number of unique elements between the two occurrences needs to be calculated. A naive implementation of Mattson's algorithm thus takes $\mathcal{O}(n\log{}n)$ space, where $n$ is the size of the trace, and $\mathcal{O}(n\log{}n.m)$ runtime where $m$ is the number of unique blocks in the trace.
+RD calculation for every block for a workload is computationally intensive. All the block requests for a given workload needs to be saved in the memory, and for every block request, the previous occurrence of that request has to be found and the number of unique elements between the two occurrences needs to be calculated. Until recently, it has been fairly expensive to calculate RD due to the large working set sizes. A naive implementation of Mattson's algorithm~\cite{mattson_evaluation_1970} takes $\mathcal{O}(n\log{n})$ space and $\mathcal{O}(n\log{n.m})$ runtime where $n$ is the size of the workload, and $m$ is the number of unique blocks requests in the workload. Standard implementations of the mattson's algorithm use a combination of balanced tree to locate the previous reference of a block, and a hash table for quick lookups into the tree. This method encures $\mathcal{O}(n\log(m))$ space and $\mathcal{O}(m)$ time.
 
-Recently there have been some works [Parda, Shards, CounterStack] that calculate RD in sublinear time with constant space. CounterStack algorithm uses a counter for each of the block request, that holds the counter for the number of blocks requested after the counter for a particular block has been initialized. Comparing the counter of a block with other blocks give the RD of that block. The space is exponentially reduced by the usage of Hyperloglog [ref] data structure for each of the counters and by various other techniques such as downsampling.
+Recently there have been works~\cite{niu_parda:_2012, waldspurger_efficient_2015, wires_characterizing_2014} that calculate RD in sublinear time with constant space. CounterStack algorithm uses a counter for each of the block request, that holds the counter for the number of blocks requested after the counter for a particular block has been initialized. Comparing the counter of a block with other blocks give the RD of that block. The space is exponentially reduced by the usage of Hyperloglog~\cite{flajolet_hyperloglog:_2007} data structure for each of the counters and by various other techniques such as downsampling.
 
-Shards on the other hand uses hashing to calculate the hash value of the block address and modulo the value by a user defined constant. If the resulting value is lesser than another user defined threshold, the block address is retained for calculating RD, if not, the block address is discarded. The authors of Shards claim that by just using the very minimal sample of uniformly distrubuted block addresses, they are able to calculate the RD values with very little error.
+Shards on the other hand uses hash based spatial sampling techchinique to calculate approximate Hit Ratio Curves. For each reference to a Logical Block Address (LBA), the hash value of the LBA is taken and if the modulo the value by a user defined constant, the LBA is used to calculate the RD. If the resulting value is lesser than user defined threshold, the block address is retained for calculating RD, if not, the block address is discarded. The authors of Shards claim that by just using the very minimal sample of uniformly distrubuted block addresses, they are able to calculate the RD values with very little error.
 
-In our work, we chose to use a variation of Mattson's Algorithm instead of adopting Shards or CounterStack for two simple reasons- First, our algorithm has a very small time window within which we calculate the RD of the blocks that have been requested. This means that our sample is already very small, in the order of tens of Kilobytes. Using Shards or CounterStack on such a small sample size is highly inefficient and leads to inaccuracies, as these methods work well with a larger sample size. Second, we were aiming to avoid serious computationally intesive calculations for calculating RD, as we would have to do this several hundreds or thousands of times depending on our time window.
+In our work, we calculate the Reuse Distance values using the open source implementation of PARDA~\cite{niu_parda:_2012}. PARDA uses a hash table that maps a LBA to its most recent reference, and a splay tree that holds the values of the number of distinct locations referenced since this LBA's most recent reference. PARDA is extremely efficient as its design philosophy resembles a map-reduce~\cite{} approach. It computes the RD parallely by partitioning the trace into different sections, process it independently, and finally merges them together. 
 
- Our variation of Mattson algorithm is shown in listingX. We maintain a global counter to count the number of block requests, and a hastable that stores the block adresses as the key and an array of indexes as it's values. This array will store the counter(s) at which the given block(key) was requested. For every block request, we look up our hashtable if the block address exists. If it does, we append the current counter value to the block address, else we insert the block address into the hastable with it's initial value as the counter's current value.
+We chose PARDA over other techniques because,
+\begin{enumerate*}
+\item Since we are running a simulation we didn't have the need for online cache optimization decisions that are provided by Counter Stack and SHARDS. 
+\item PARDA provides an accurate Hit Ratio Curves as opposed to approximate curves, and 
+\item PARDA's implementation is open source, and readily available to implement and could be easily intergrated within our system. 
+\end{enumerate*}
+PARDA calculates the HRC curves for both read and write requests. Since, in our work we are interested only in read requests, we pre-processed the input trace to discard all write requests. PARDA also only takes as input all the requests of a LBA, and since our traces from SNIA contain several other details of block I/O traces, we just discard everything except for the LBA requests. \note{Shaohua, can you confirm this?}
 
- If we want to calculate the reuse distance, usually at the end of a timewindow, the hastable is iterated one key at a time and the pairwise-difference between each of the values of the keys gives us the approximate reuse distance. A cdf of all the pairwise-distances gives us an approximate HRC as a function of the reuse distance. \note{Need better explanation}
+%In our work, we chose to use a variation of Mattson's Algorithm instead of adopting Shards or CounterStack for two simple reasons- First, our algorithm has a very small time window within which we calculate the RD of the blocks that have been requested. This means that our sample is already very small, in the order of tens of Kilobytes. Using Shards or CounterStack on such a small sample size is highly inefficient and leads to inaccuracies, as these methods work well with a larger sample size. Second, we were aiming to avoid serious computationally intesive calculations for calculating RD, as we would have to do this several hundreds or thousands of times depending on our time window.
+
+% Our variation of Mattson algorithm is shown in listingX. We maintain a global counter to count the number of block requests, and a hastable that stores the block adresses as the key and an array of indexes as it's values. This array will store the counter(s) at which the given block(key) was requested. For every block request, we look up our hashtable if the block address exists. If it does, we append the current counter value to the block address, else we insert the block address into the hastable with it's initial value as the counter's current value.
+
+% If we want to calculate the reuse distance, usually at the end of a timewindow, the hastable is iterated one key at a time and the pairwise-difference between each of the values of the keys gives us the approximate reuse distance. A cdf of all the pairwise-distances gives us an approximate HRC as a function of the reuse distance. \note{Need better explanation}
 
  \subsection{Reuse Intensity}
 
-\emph{Reuse Intesity} is used as a measure to capture sudden bursts in hit ratio, as opposed to RD which is used to capture the overall trend of the hit ratio for a given time window. For certain web services, such as stock market providers, capturing quick bursts in trend is vital. To this end, 
+\emph{Reuse Intesity} is used as a measure to capture sudden bursts of hit ratio in a cache. Different VMs will access the cache at different rate and capturing the relative speed of their cache accesses is important. Traditional HRC estimation mechanisms using RD fail to consider the relative access speeds with which different VM accesses the cache. For instance, certain web services, such as stock market providers, capturing quick bursts in trend is vital. To this end, 
 
 \begin{equation}
 RI = 1 - \frac{\text{\# unique blocks}}{\text{\# total blocks}}
 \label{eq:ri}
 \end{equation}
 
-captures the sudden bursts in Hit Ratio. The above equation indicates that, more the workload is random, the closer the value of $RI$ will be to 0. For instance, if there is only 9 unique blocks from a workload of 10 block requests, the value of $RI$ will be 0.1. On the other hand, if the workload has a lot of repeated requests to the same block, the value of $RI$ will be close to 1. The value of $RI$ once every 60 seconds, and can be tuned as a user parameter. The overhead incurred by this calculation is very minimal compared to the other computations in our algorithm. So, calcualting this value in the background/parallely to other computations results in zero overhead. \note{is this statement true?}
+captures the sudden bursts in Hit Ratio. The above equation indicates that, more the workload is random, the closer the value of $RI$ will be to 0. For instance, if there is only 9 unique blocks from a workload of 10 block requests, the value of $RI$ will be 0.1. On the other hand, if the workload has a lot of repeated requests to the same block, the value of $RI$ will be close to 1. The value of $RI$ is calculated once every 60 seconds, and can be tuned as a user parameter. The overhead incurred by this calculation is very minimal compared to the other computations in our algorithm. So, calcualting this value in the background/parallely to other computations results in zero overhead. \note{is this statement true? Can we also have an experiment showing why RI is essential? May be have an experiment with sudden spikes and show how RI adapts but RD doesn't}
 
 \subsection{Cache Utility model}
 
