--- a/Documentation/paper.tex
+++ b/Documentation/paper.tex
@@ -25,6 +25,11 @@
 \usepackage{times}
 \usepackage{comment}
 
+% http://tex.stackexchange.com/questions/61811/how-to-define-inparaenum-in-the-preamble
+% Inpara numbering
+\usepackage[inline]{enumitem}
+%\setlist[enumerate,1]{label=\textit{\alph*)}}
+
 % \usepackage{caption}
 
 \newcommand{\cut}[1]{}
